# mrex

./: .clinerules  .gitignore  Cargo.toml  PLAN.md  README.md
src/: cli.rs  error.rs  ffmpeg.rs  main.rs  metrics.rs  plot.rs
