[package]
name = "mrex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3.6"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
num_cpus = "1.16"
regex = "1.10"
quantiles = "0.7.1" # For percentile calculations
fern = "0.6" # For file logging
once_cell = "1.19" # Added implicitly by previous step, but good to make explicit
chrono = "0.4" # For timestamped log files
